ensure more error explanations are visible

--- a/app/assets/stylesheets/2015/base.css.scss
+++ b/app/assets/stylesheets/2015/base.css.scss
@@ -39,7 +39,7 @@ body {
 	text-align: center;
 }
 
-.error {
+.error, #error_explanation li {
 	color: red;
 	font-size: 1.2em;
 }
